--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <!-- 振動權限，用於通知和提醒 -->
     <uses-permission android:name="android.permission.VIBRATE" />
     
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:label="健康健身"
         android:name="${applicationName}"
